--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/nmea_hardware_interface
-	previous = 
-	base = b1e0767
+	previous = b1e0767
+	base = 4d1113c
 	trim = 
 	trimbase = 
