--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/nmea_hardware_interface
-	previous = 
-	base = 2866479
+	previous = 2866479
+	base = 5f83f0a
 	trim = 
 	trimbase = 
