--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/nmea_hardware_interface
-	previous = 
-	base = 9706b23
+	previous = 9706b23
+	base = b1d32bf
 	trim = 
 	trimbase = 
